<resources>
    <string name="app_name">AwasCovid (PENS)</string>
    <string name="title_text">AwasCovid: Portable Thermal Monitoring Device by Politeknik Elektronika Negeri Surabaya</string>
    <string name="sdk_version_text">Thermal SDK version %1$s</string>
    <string name="send_freq_text">Send freq: %1$s</string>
    <string name="send_url_text">http://192.168.0.4:8000/</string>
    <string name="connect_f1_text">Connect\nDevice</string>
    <string name="connect_sim1_text">Connect\nSim1</string>
    <string name="connect_sim2_text">Connect\nSim2</string>
    <string name="connection_status_text">Status %1$s</string>
    <string name="center_temp_text">Center Pos Temp: %1$s</string>
    <string name="discovery_status_text">Discovery status %1$s</string>
    <string name="start_discovery_text">start Discovery</string>
    <string name="stop_discovery_text">stop Discovery</string>
    <string name="disconnect_text">Disconnect</string>
</resources>
