<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <!-- Title  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textSize="20sp"
        tools:text="AwasCovid: Portable Thermal Monitoring Device by Politeknik Elektronika Negeri Surabaya" />

    <!-- Show SDK version  -->
    <TextView
        android:id="@+id/sdk_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdk_version_text"
        android:textSize="18sp" />

    <!-- Start / Stop discovery buttons  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_discovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startDiscovery"
            android:text="@string/start_discovery_text" />

        <Button
            android:id="@+id/stop_discovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="stopDiscovery"
            android:text="@string/stop_discovery_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/discovery_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discovery_status_text"
        android:textSize="18sp" />

    <!-- Connect to FLIR ONE / Emulators buttons  -->
    <EditText
        android:id="@+id/send_url_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textWebEditText"
        android:text="@string/send_url_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/connect_flir_one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="connectFlirOne"
            android:text="@string/connect_f1_text" />

        <Button
            android:id="@+id/connect_s1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="connectSimulatorOne"
            android:text="@string/connect_sim1_text" />

        <Button
            android:id="@+id/connect_s2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="connectSimulatorTwo"
            android:text="@string/connect_sim2_text" />

        <Button
            android:id="@+id/disconnect_any"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="disconnect"
            android:text="@string/disconnect_text" />

    </LinearLayout>

    <TextView
        android:id="@+id/send_freq_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_freq_text"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/send_freq_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/connection_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_status_text"/>

    <TextView
        android:id="@+id/center_temp_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/center_temp_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/msx_image"
            android:layout_width="199dp"
            android:layout_height="173dp"
            android:contentDescription="image with IR and visual data mixed"
            android:maxWidth="50dp"
            android:minWidth="50dp" />

        <ImageView
            android:id="@+id/photo_image"
            android:layout_width="199dp"
            android:layout_height="match_parent"
            android:contentDescription="image with only visual image"
            android:maxWidth="50dp"
            android:minWidth="50dp" />
    </LinearLayout>


</LinearLayout>